2004-08-25  Andrew Cagney  <cagney@gnu.org>

	* infrun.c (struct execution_control_state): Delete field
	"stepping_through_sigtramp".
	(init_execution_control_state): Do not set same.
	(context_switch): Do not pass same to save_infrun_state and
	load_infrun_state.
	* gdbthread.h (struct thread_info): Delete field
	stepping_through_sigtramp.
	(save_infrun_state, load_infrun_state): Delete parameter
	stepping_through_sigtramp.
	* thread.c (load_infrun_state, save_infrun_state): Update.

	* infrun.c: Re-indent.  Move expression operators to the beginning
	of the line.  Remove long disabled #if 0 code.

2004-08-24  Andrew Cagney  <cagney@gnu.org>

	* doublest.h (floatformat_ieee_quad): Rename
	floatformat_ia64_quad.
	* doublest.c (floatformat_ieee_quad): Rename
	floatformat_ia64_quad.
	(_initialize_doublest): Update.

2004-08-24  Jim Blandy  <jimb@redhat.com>

	* dwarf2expr.h (struct dwarf_expr_context): New members
	'num_pieces' and 'pieces', for returning the result of an
	expression that uses DW_OP_piece.
	(struct dwarf_expr_piece): New struct type.
	* dwarf2expr.c (new_dwarf_expr_context): Initialize num_pieces and
	pieces.
	(free_dwarf_expr_context): Free pieces, if any.
	(add_piece): New function.
	(execute_stack_op): Implement DW_OP_piece.
	* dwarf2loc.c (dwarf2_evaluate_loc_desc): If the result of the
	expression is a list of pieces, print an error message.
        (dwarf2_loc_desc_needs_frame): If the expression yields
        pieces, and any piece is in a register, then we need a frame.

	* dwarf2loc.c (dwarf2_evaluate_loc_desc): Wait to fetch the top of
	the stack until we've decided what sort of result the evaluation
	has produced.  Use separate variables, with more specific names.

2004-08-23  Richard Earnshaw  <rearnsha@arm.com>

	* armnbsd-tdep.c (arm_nbsd_arm_be_breakpoint): Define.
	(arm_nbsd_thumb_[lb]e_breakpoint): Define.
	(arm_netbsd_init_abi_common): Register them.

2004-08-22  Mark Kettenis  <kettenis@gnu.org>
