@@ -1,3 +1,7 @@
+2004-08-25  Jim Blandy  <jimb@redhat.com>
+
+	* gdbtypes.h (TYPE_CODE_ARRAY): Doc fix.
+
 2004-08-25  Andrew Cagney  <cagney@gnu.org>
 
 	* infrun.c (struct execution_control_state): Delete field
